# UniChat

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  DEPLOY.md  README.md  TODOS.md  config.yaml  config.yaml.example  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 36f478faac54_initial.py  4221d11a5c54_drop_contact_inbox_id.py
deploy/: deploy.env.example  deploy.sh  migrate_drop_contact_inbox_id.py  nginx-unichat.conf  sudoers.unichat  unichat.service
docs/: deploy-guide.md  测试方案.md
docs/adr/: 0001-v1-single-channel-minimal-entities.md  0002-echo-agentbot-http-loopback.md  0003-add-web-channel.md
docs/agents/: domain.md  issue-tracker.md
docs/e2e测试/: AI-Agent-添加E2E测试指南.md  测试点清单.md
docs/架构/: UniChat-系统架构.md
script/: .gitignore  run_e2e.sh
src/: app.py  bus.py  config.py  db.py  log_setup.py  main.py  models.py
src/adapters/: base.py  registry.py
src/routes/: admin.py  echo.py  health.py  reply.py  webhook.py  widget.py  ws.py
src/services/: idle_sweep.py  ingest.py  notifier.py  reply_receiver.py  sender.py  state_machine.py  web_session_registry.py  ws_notifier.py
src/static/: demo.html  widget.js
src/templates/: _conv_list.html  _messages.html  admin.html  base.html  login.html
tests/: test_admin_ui.py  test_health.py  test_integration.py  test_slice3.py  test_slice4.py  test_slice5.py  test_slice6.py  test_test_adapter.py  test_wa_adapter.py  test_web_adapter.py  test_ws_notifier.py  wa_helpers.py
tests/e2e/: conftest.py  (+3 more)
widget/: esbuild.config.js  package-lock.json  package.json
(+13 files in other folders)
